--- a/requirements_ai.txt
+++ b/requirements_ai.txt
@@ -1,14 +1,14 @@
-Django==5.2.7
-djangorestframework==3.15.2
-
-# Data import and processing
+# Core ML & Scientific Computing
+numpy>=1.24.0,<2.0.0
 pandas>=2.0.0
-xport>=3.3.0  # For NHANES XPT file reading
-openpyxl>=3.1.0  # For Excel files (optional)
-
-# ML and scientific computing
-numpy>=1.24.0
 scikit-learn>=1.3.0
+scipy>=1.11.0
+joblib>=1.3.0
 
-# Data validation
+# Data Import & Processing
+xport>=3.3.0  # For NHANES XPT file reading
+openpyxl>=3.1.0  # For Excel files
 python-dateutil>=2.8.0
+
+# Additional ML Utilities
+threadpoolctl>=3.1.0
