--- a/requirements_ai.txt
+++ b/requirements_ai.txt
@@ -6,7 +6,7 @@ scipy>=1.11.0
 joblib>=1.3.0
 
 # Data Import & Processing
-xport>=3.3.0  # For NHANES XPT file reading
+# xport>=3.3.0  # Commented out - conflicts with pandas>=2.0 (only needed for NHANES import)
 openpyxl>=3.1.0  # For Excel files
 python-dateutil>=2.8.0
 
