Fix: reduce workers to 1 and gate AI routes to prevent OOM crashes on Render free tier

--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     runtime: python
     plan: free
     buildCommand: "./build.sh"
-    # Use fewer workers to avoid memory pressure on free instances
-    startCommand: "gunicorn projetPython.wsgi:application --workers=${WEB_CONCURRENCY:-2} --timeout 120 --keep-alive 5"
+    # Use single worker to avoid OOM on free instances
+    startCommand: "gunicorn projetPython.wsgi:application --workers=1 --timeout=120 --max-requests=200 --max-requests-jitter=20"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -23,7 +23,9 @@ services:
       - key: ALLOWED_HOSTS
         value: ".onrender.com"
       - key: WEB_CONCURRENCY
-        value: "2"
+        value: "1"
+      - key: ENABLE_AI_ROUTES
+        value: "0"
 
 databases:
   - name: carnet-sante-db
