--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,12 @@ services:
   - type: web
     name: carnet-de-sante-django
     runtime: python
-    plan: starter  # Free tier
+    plan: starter
     buildCommand: "./build.sh"
     startCommand: "gunicorn projetPython.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: "3.11.0"
       - key: DATABASE_URL
         fromDatabase:
           name: carnet-de-sante-db
@@ -18,17 +18,12 @@ services:
       - key: DJANGO_SETTINGS_MODULE
         value: projetPython.settings
       - key: DEBUG
-        value: False
+        value: "False"
       - key: ALLOWED_HOSTS
-        sync: false  # Will be set manually
-    autoDeploy: true
+        sync: false
 
-  # PostgreSQL Database
-  - type: pserv
-    name: carnet-de-sante-db
-    runtime: postgres
-    plan: starter  # Free tier
-    ipAllowList: []  # Allow all IPs
-    databases:
-      - name: carnet_de_sante
-        user: carnet_user
+databases:
+  - name: carnet-de-sante-db
+    databaseName: carnet_de_sante
+    user: carnet_user
+    plan: starter
