--- a/render.yaml
+++ b/render.yaml
@@ -10,9 +10,7 @@ services:
       - key: PYTHON_VERSION
         value: "3.11.0"
       - key: DATABASE_URL
-        fromDatabase:
-          name: carnet-de-sante-db
-          property: connectionString
+        sync: false
       - key: SECRET_KEY
         generateValue: true
       - key: DJANGO_SETTINGS_MODULE
@@ -21,9 +19,3 @@ services:
         value: "False"
       - key: ALLOWED_HOSTS
         sync: false
-
-databases:
-  - name: carnet-de-sante-db
-    databaseName: carnet_de_sante
-    user: carnet_user
-    plan: free
